[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mula"
version = "1.3.0"
description = "Add your description here"
authors = [
    { name = "David", email = "sena.ufc@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "mechanicalsoup>=1.3.0",
]


[project.scripts]
mula = "mula.__main__:main"
