[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mula"
version = "1.6.0"
description = "Add your description here"
authors = [
    { name = "David", email = "sena.ufc@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "markdown>=3.8",
    "mechanicalsoup>=1.3.0",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.15",
    "requests>=2.32.3",
    "types-appdirs>=1.4.3.5",
]


[project.scripts]
mula = "mula.__main__:main"
md2ht = "mula.html:main"
